--- a/.github/workflows/nodejs-cicd.yml
+++ b/.github/workflows/nodejs-cicd.yml
@@ -2,17 +2,11 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches: [ "main" ]  # Triggers pipeline on any commit to main
-
-env:
-  SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-  SONAR_HOST_URL: ${{ vars.SONAR_HOST_URL }}
-  DOCKER_USERNAME: ${{ vars.DOCKERHUB_USERNAME }}
-  DOCKER_PASSWORD: ${{ secrets.DOCKERHUB_TOKEN }}
+    branches: [ "test" ]
 
 jobs:
   compile:
-    runs-on: self-hosted-2
+    runs-on: ec2-hosted
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-node@v4
@@ -22,7 +16,7 @@ jobs:
       run: npm ci
 
   security-check:
-    runs-on: self-hosted-2
+    runs-on: ec2-hosted
     needs: compile
     steps:
     - uses: actions/checkout@v4
@@ -43,7 +37,7 @@ jobs:
           --report-path=/app/gitleaks-report.json
 
   test:
-    runs-on: self-hosted-2
+    runs-on: ec2-hosted
     needs: security-check
     steps:
     - uses: actions/checkout@v4
@@ -56,7 +50,7 @@ jobs:
       run: npm test
 
   sonar_scan:
-    runs-on: self-hosted-2
+    runs-on: ec2-hosted
     needs: test
     steps:
     - uses: actions/checkout@v4
@@ -68,14 +62,14 @@ jobs:
       with:
         projectBaseDir: .
       env:
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}  # You can migrate this also to AWS Secrets Manager if desired
         SONAR_HOST_URL: ${{ vars.SONAR_HOST_URL }}
 
     - name: Install jq locally
       run: |
         curl -L -o jq https://github.com/stedolan/jq/releases/download/jq-1.6/jq-linux64
         chmod +x jq
-        echo "$PWD" >> $GITHUB_PATH   
+        echo "$PWD" >> $GITHUB_PATH
 
     - name: SonarQube Quality Gate
       uses: sonarsource/sonarqube-quality-gate-action@master
@@ -86,46 +80,84 @@ jobs:
         SONAR_HOST_URL: ${{ vars.SONAR_HOST_URL }}
 
   docker_build_and_push:
-    runs-on: self-hosted-2
+    runs-on: ec2-hosted
     needs: sonar_scan
     steps:
     - uses: actions/checkout@v4
 
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v3
+      with:
+        aws-region: ap-southeast-1
+        role-to-assume: arn:aws:iam::634277304418:role/nodejs-cicd-role
+
+
+    - name: Get secrets from AWS Secrets Manager
+      id: secrets
+      uses: aws-actions/aws-secretsmanager-get-secrets@v1
+      with:
+        secret-ids: |
+          DOCKERHUB_CREDENTIALS:/your-app/prod/dockerhub
+        parse-json-secrets: true
+
     - name: Login to DockerHub
       uses: docker/login-action@v3
       with:
-        username: ${{ env.DOCKER_USERNAME }}
-        password: ${{ env.DOCKER_PASSWORD }}
+        username: ${{ steps.secrets.outputs.DOCKERHUB_CREDENTIALS_username }}
+        password: ${{ steps.secrets.outputs.DOCKERHUB_CREDENTIALS_password }}
 
     - name: Build Docker Image (with version tag)
       run: |
-        docker build -t $DOCKER_USERNAME/nodejs-cicd-app:latest .
-        docker tag $DOCKER_USERNAME/nodejs-cicd-app:latest $DOCKER_USERNAME/nodejs-cicd-app:${{ github.sha }}
+        docker build -t ${{ steps.secrets.outputs.DOCKERHUB_CREDENTIALS_username }}/nodejs-cicd-app:latest .
+        docker tag ${{ steps.secrets.outputs.DOCKERHUB_CREDENTIALS_username }}/nodejs-cicd-app:latest ${{ steps.secrets.outputs.DOCKERHUB_CREDENTIALS_username }}/nodejs-cicd-app:${{ github.sha }}
 
     - name: Trivy Image Scan
       run: |
         docker run --rm \
           -v /var/run/docker.sock:/var/run/docker.sock \
-          aquasec/trivy image $DOCKER_USERNAME/nodejs-cicd-app:latest
+          aquasec/trivy image ${{ steps.secrets.outputs.DOCKERHUB_CREDENTIALS_username }}/nodejs-cicd-app:latest
 
     - name: Push Docker Image
       run: |
-        docker push $DOCKER_USERNAME/nodejs-cicd-app:latest
-        docker push $DOCKER_USERNAME/nodejs-cicd-app:${{ github.sha }}
+        docker push ${{ steps.secrets.outputs.DOCKERHUB_CREDENTIALS_username }}/nodejs-cicd-app:latest
+        docker push ${{ steps.secrets.outputs.DOCKERHUB_CREDENTIALS_username }}/nodejs-cicd-app:${{ github.sha }}
 
-  deploy_to_local:
-    runs-on: self-hosted
+  deploy_to_ec2:
+    runs-on: ubuntu-latest
     needs: docker_build_and_push
     steps:
-    - name: Stop Existing Container (if any)
-      run: docker stop nodeapp || true && docker rm nodeapp || true
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v3
+      with:
+        aws-region: ap-southeast-1
+        role-to-assume: arn:aws:iam::634277304418:role/nodejs-cicd-role
 
-    - name: Pull Latest Docker Image
-      run: docker pull ${{ vars.DOCKERHUB_USERNAME }}/nodejs-cicd-app:latest
+    - name: Get app secrets from AWS Secrets Manager
+      id: app_secrets
+      uses: aws-actions/aws-secretsmanager-get-secrets@v1
+      with:
+        secret-ids: |
+          APP_CREDENTIALS:nodejs-github-actions-1
+        parse-json-secrets: true
 
-    - name: Run New Container with Restart Policy
+    - name: Add SSH key
       run: |
-        docker run -d -p 3000:3000 \
-          --restart unless-stopped \
-          --name nodeapp \
-          ${{ vars.DOCKERHUB_USERNAME }}/nodejs-cicd-app:latest
+        mkdir -p ~/.ssh
+        echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/id_rsa
+        chmod 600 ~/.ssh/id_rsa
+
+    - name: Deploy to EC2 via SSH
+      env:
+        DB_URL: ${{ steps.app_secrets.outputs.APP_CREDENTIALS_DB_URL }}
+        API_KEY: ${{ steps.app_secrets.outputs.APP_CREDENTIALS_API_KEY }}
+      run: |
+        ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_IP }} "
+          docker pull ${{ steps.secrets.outputs.DOCKERHUB_CREDENTIALS_username }}/nodejs-cicd-app:latest
+          docker stop nodeapp || true && docker rm nodeapp || true
+          docker run -d -p 3000:3000 \
+            --restart unless-stopped \
+            --name nodeapp \
+            -e DB_URL=\$DB_URL \
+            -e API_KEY=\$API_KEY \
+            ${{ steps.secrets.outputs.DOCKERHUB_CREDENTIALS_username }}/nodejs-cicd-app:latest
+        "
