--- a/.github/workflows/nodejs-cicd.yml
+++ b/.github/workflows/nodejs-cicd.yml
@@ -20,13 +20,11 @@ jobs:
     needs: compile
     steps:
     - uses: actions/checkout@v4
-
     - name: Trivy FS Scan (via Docker)
       run: |
         docker run --rm \
           -v $(pwd):/project \
           aquasec/trivy fs /project
-
     - name: Gitleaks Code Scan (via Docker)
       run: |
         docker run --rm \
@@ -57,13 +55,27 @@ jobs:
       with:
         fetch-depth: 0
 
+    - name: Configure AWS credentials for SonarQube secrets
+      uses: aws-actions/configure-aws-credentials@v3
+      with:
+        aws-region: ap-southeast-1
+        role-to-assume: arn:aws:iam::634277304418:role/nodejs-cicd-role
+
+    - name: Get SonarQube secrets from AWS Secrets Manager
+      id: sonar_secrets
+      uses: aws-actions/aws-secretsmanager-get-secrets@v1
+      with:
+        secret-ids: |
+          SONAR_CREDENTIALS:nodejs-github-actions-1
+        parse-json-secrets: true
+
     - name: SonarQube Scan
       uses: sonarsource/sonarqube-scan-action@master
       with:
         projectBaseDir: .
       env:
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}  # You can migrate this also to AWS Secrets Manager if desired
-        SONAR_HOST_URL: ${{ vars.SONAR_HOST_URL }}
+        SONAR_TOKEN: ${{ steps.sonar_secrets.outputs.SONAR_CREDENTIALS_SONAR_TOKEN }}
+        SONAR_HOST_URL: ${{ steps.sonar_secrets.outputs.SONAR_CREDENTIALS_SONAR_HOST_URL }}
 
     - name: Install jq locally
       run: |
@@ -76,8 +88,8 @@ jobs:
       with:
         pollingTimeoutSec: 600
       env:
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        SONAR_HOST_URL: ${{ vars.SONAR_HOST_URL }}
+        SONAR_TOKEN: ${{ steps.sonar_secrets.outputs.SONAR_CREDENTIALS_SONAR_TOKEN }}
+        SONAR_HOST_URL: ${{ steps.sonar_secrets.outputs.SONAR_CREDENTIALS_SONAR_HOST_URL }}
 
   docker_build_and_push:
     runs-on: ec2-hosted
@@ -85,48 +97,47 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Configure AWS credentials
+    - name: Configure AWS credentials for DockerHub secrets
       uses: aws-actions/configure-aws-credentials@v3
       with:
         aws-region: ap-southeast-1
         role-to-assume: arn:aws:iam::634277304418:role/nodejs-cicd-role
 
-
-    - name: Get secrets from AWS Secrets Manager
-      id: secrets
+    - name: Get DockerHub credentials from AWS Secrets Manager
+      id: dockerhub_secrets
       uses: aws-actions/aws-secretsmanager-get-secrets@v1
       with:
         secret-ids: |
-          DOCKERHUB_CREDENTIALS:/your-app/prod/dockerhub
+          DOCKERHUB_CREDENTIALS:nodejs-github-actions-1
         parse-json-secrets: true
 
     - name: Login to DockerHub
       uses: docker/login-action@v3
       with:
-        username: ${{ steps.secrets.outputs.DOCKERHUB_CREDENTIALS_username }}
-        password: ${{ steps.secrets.outputs.DOCKERHUB_CREDENTIALS_password }}
+        username: ${{ steps.dockerhub_secrets.outputs.DOCKERHUB_CREDENTIALS_username }}
+        password: ${{ steps.dockerhub_secrets.outputs.DOCKERHUB_CREDENTIALS_password }}
 
-    - name: Build Docker Image (with version tag)
+    - name: Build Docker Image with version tag
       run: |
-        docker build -t ${{ steps.secrets.outputs.DOCKERHUB_CREDENTIALS_username }}/nodejs-cicd-app:latest .
-        docker tag ${{ steps.secrets.outputs.DOCKERHUB_CREDENTIALS_username }}/nodejs-cicd-app:latest ${{ steps.secrets.outputs.DOCKERHUB_CREDENTIALS_username }}/nodejs-cicd-app:${{ github.sha }}
+        docker build -t ${{ steps.dockerhub_secrets.outputs.DOCKERHUB_CREDENTIALS_username }}/nodejs-cicd-app:latest .
+        docker tag ${{ steps.dockerhub_secrets.outputs.DOCKERHUB_CREDENTIALS_username }}/nodejs-cicd-app:latest ${{ steps.dockerhub_secrets.outputs.DOCKERHUB_CREDENTIALS_username }}/nodejs-cicd-app:${{ github.sha }}
 
     - name: Trivy Image Scan
       run: |
         docker run --rm \
           -v /var/run/docker.sock:/var/run/docker.sock \
-          aquasec/trivy image ${{ steps.secrets.outputs.DOCKERHUB_CREDENTIALS_username }}/nodejs-cicd-app:latest
+          aquasec/trivy image ${{ steps.dockerhub_secrets.outputs.DOCKERHUB_CREDENTIALS_username }}/nodejs-cicd-app:latest
 
     - name: Push Docker Image
       run: |
-        docker push ${{ steps.secrets.outputs.DOCKERHUB_CREDENTIALS_username }}/nodejs-cicd-app:latest
-        docker push ${{ steps.secrets.outputs.DOCKERHUB_CREDENTIALS_username }}/nodejs-cicd-app:${{ github.sha }}
+        docker push ${{ steps.dockerhub_secrets.outputs.DOCKERHUB_CREDENTIALS_username }}/nodejs-cicd-app:latest
+        docker push ${{ steps.dockerhub_secrets.outputs.DOCKERHUB_CREDENTIALS_username }}/nodejs-cicd-app:${{ github.sha }}
 
   deploy_to_ec2:
     runs-on: ubuntu-latest
     needs: docker_build_and_push
     steps:
-    - name: Configure AWS credentials
+    - name: Configure AWS credentials for app secrets
       uses: aws-actions/configure-aws-credentials@v3
       with:
         aws-region: ap-southeast-1
@@ -140,7 +151,7 @@ jobs:
           APP_CREDENTIALS:nodejs-github-actions-1
         parse-json-secrets: true
 
-    - name: Add SSH key
+    - name: Add SSH private key
       run: |
         mkdir -p ~/.ssh
         echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/id_rsa
@@ -152,12 +163,12 @@ jobs:
         API_KEY: ${{ steps.app_secrets.outputs.APP_CREDENTIALS_API_KEY }}
       run: |
         ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_IP }} "
-          docker pull ${{ steps.secrets.outputs.DOCKERHUB_CREDENTIALS_username }}/nodejs-cicd-app:latest
+          docker pull ${{ steps.dockerhub_secrets.outputs.DOCKERHUB_CREDENTIALS_username }}/nodejs-cicd-app:latest
           docker stop nodeapp || true && docker rm nodeapp || true
           docker run -d -p 3000:3000 \
             --restart unless-stopped \
             --name nodeapp \
             -e DB_URL=\$DB_URL \
             -e API_KEY=\$API_KEY \
-            ${{ steps.secrets.outputs.DOCKERHUB_CREDENTIALS_username }}/nodejs-cicd-app:latest
+            ${{ steps.dockerhub_secrets.outputs.DOCKERHUB_CREDENTIALS_username }}/nodejs-cicd-app:latest
         "
