--- a/.github/workflows/nodejs-cicd.yml
+++ b/.github/workflows/nodejs-cicd.yml
@@ -1,16 +1,17 @@
 name: CI/CD Pipeline
 
-# **IMPORTANT:** These permissions enable GitHub Actions OIDC token usage for AWS role assumption
+# Necessary permissions for AWS OIDC role assumption
 permissions:
   id-token: write
   contents: read
 
 on:
   push:
-    branches: [ "test" ]
+    branches: [ "test" ]  # Adjust branch as needed
 
 jobs:
 
+  # 1. Compile Job
   compile:
     runs-on: ec2-hosted
     steps:
@@ -21,6 +22,7 @@ jobs:
       - name: Install Dependencies
         run: npm ci
 
+  # 2. Security Check Job (Trivy + Gitleaks)
   security-check:
     runs-on: ec2-hosted
     needs: compile
@@ -33,6 +35,7 @@ jobs:
         run: |
           docker run --rm -v $(pwd):/app zricethezav/gitleaks:latest detect --source=/app --report-format=json --report-path=/app/gitleaks-report.json
 
+  # 3. Test Job
   test:
     runs-on: ec2-hosted
     needs: security-check
@@ -46,6 +49,7 @@ jobs:
       - name: Run Unit Tests
         run: npm test
 
+  # 4. SonarQube Scan Job
   sonar_scan:
     runs-on: ec2-hosted
     needs: test
@@ -54,116 +58,124 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Configure AWS credentials for SonarQube secrets
+      # Configure AWS credentials with OIDC role
+      - name: Configure AWS credentials for Secrets Manager access
         uses: aws-actions/configure-aws-credentials@v3
         with:
           aws-region: ap-southeast-1
           role-to-assume: arn:aws:iam::634277304418:role/nodejs-cicd-role
 
-      - name: Get SonarQube secrets from AWS Secrets Manager
-        id: sonar_secrets
+      # Fetch all secrets from AWS Secrets Manager once
+      - name: Get all pipeline secrets from AWS Secrets Manager
+        id: pipeline_secrets
         uses: aws-actions/aws-secretsmanager-get-secrets@v1
         with:
           secret-ids: |
-            nodejs_github_actions
+            PIPELINE_SECRETS:nodejs_github_actions
           parse-json-secrets: true
 
+      # SonarQube Scan Step
       - name: SonarQube Scan
         uses: sonarsource/sonarqube-scan-action@master
         with:
           projectBaseDir: .
         env:
-          SONAR_TOKEN: ${{ steps.sonar_secrets.outputs.SONAR_CREDENTIALS_SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ steps.sonar_secrets.outputs.SONAR_CREDENTIALS_SONAR_HOST_URL }}
+          SONAR_TOKEN: ${{ steps.pipeline_secrets.outputs.PIPELINE_SECRETS_SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ steps.pipeline_secrets.outputs.PIPELINE_SECRETS_SONAR_HOST_URL }}
 
+      # Install jq for quality gate check (optional step)
       - name: Install jq locally
         run: |
           curl -L -o jq https://github.com/stedolan/jq/releases/download/jq-1.6/jq-linux64
           chmod +x jq
           echo "$PWD" >> $GITHUB_PATH
 
+      # SonarQube Quality Gate Step
       - name: SonarQube Quality Gate
         uses: sonarsource/sonarqube-quality-gate-action@master
         with:
           pollingTimeoutSec: 600
         env:
-          SONAR_TOKEN: ${{ steps.sonar_secrets.outputs.SONAR_CREDENTIALS_SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ steps.sonar_secrets.outputs.SONAR_CREDENTIALS_SONAR_HOST_URL }}
+          SONAR_TOKEN: ${{ steps.pipeline_secrets.outputs.PIPELINE_SECRETS_SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ steps.pipeline_secrets.outputs.PIPELINE_SECRETS_SONAR_HOST_URL }}
 
+  # 5. Docker Build and Push Job
   docker_build_and_push:
     runs-on: ec2-hosted
     needs: sonar_scan
     steps:
       - uses: actions/checkout@v4
 
-      - name: Configure AWS credentials for DockerHub secrets
+      - name: Configure AWS credentials for Secrets Manager access
         uses: aws-actions/configure-aws-credentials@v3
         with:
           aws-region: ap-southeast-1
           role-to-assume: arn:aws:iam::634277304418:role/nodejs-cicd-role
 
-      - name: Get DockerHub credentials from AWS Secrets Manager
-        id: dockerhub_secrets
+      # Fetch secrets once again (note: can be optimized to pass between jobs)
+      - name: Get all pipeline secrets from AWS Secrets Manager
+        id: pipeline_secrets
         uses: aws-actions/aws-secretsmanager-get-secrets@v1
         with:
           secret-ids: |
-            nodejs_github_actions
+            PIPELINE_SECRETS:nodejs_github_actions
           parse-json-secrets: true
 
       - name: Login to DockerHub
         uses: docker/login-action@v3
         with:
-          username: ${{ steps.dockerhub_secrets.outputs.DOCKERHUB_CREDENTIALS_username }}
-          password: ${{ steps.dockerhub_secrets.outputs.DOCKERHUB_CREDENTIALS_password }}
+          username: ${{ steps.pipeline_secrets.outputs.PIPELINE_SECRETS_DOCKERHUB_USERNAME }}
+          password: ${{ steps.pipeline_secrets.outputs.PIPELINE_SECRETS_DOCKERHUB_TOKEN }}
 
       - name: Build Docker Image with version tag
         run: |
-          docker build -t ${{ steps.dockerhub_secrets.outputs.DOCKERHUB_CREDENTIALS_username }}/nodejs-cicd-app:latest .
-          docker tag ${{ steps.dockerhub_secrets.outputs.DOCKERHUB_CREDENTIALS_username }}/nodejs-cicd-app:latest ${{ steps.dockerhub_secrets.outputs.DOCKERHUB_CREDENTIALS_username }}/nodejs-cicd-app:${{ github.sha }}
+          docker build -t ${{ steps.pipeline_secrets.outputs.PIPELINE_SECRETS_DOCKERHUB_USERNAME }}/nodejs-cicd-app:latest .
+          docker tag ${{ steps.pipeline_secrets.outputs.PIPELINE_SECRETS_DOCKERHUB_USERNAME }}/nodejs-cicd-app:latest ${{ steps.pipeline_secrets.outputs.PIPELINE_SECRETS_DOCKERHUB_USERNAME }}/nodejs-cicd-app:${{ github.sha }}
 
       - name: Trivy Image Scan
         run: |
-          docker run --rm -v /var/run/docker.sock:/var/run/docker.sock aquasec/trivy image ${{ steps.dockerhub_secrets.outputs.DOCKERHUB_CREDENTIALS_username }}/nodejs-cicd-app:latest
+          docker run --rm -v /var/run/docker.sock:/var/run/docker.sock aquasec/trivy image ${{ steps.pipeline_secrets.outputs.PIPELINE_SECRETS_DOCKERHUB_USERNAME }}/nodejs-cicd-app:latest
 
       - name: Push Docker Image
         run: |
-          docker push ${{ steps.dockerhub_secrets.outputs.DOCKERHUB_CREDENTIALS_username }}/nodejs-cicd-app:latest
-          docker push ${{ steps.dockerhub_secrets.outputs.DOCKERHUB_CREDENTIALS_username }}/nodejs-cicd-app:${{ github.sha }}
+          docker push ${{ steps.pipeline_secrets.outputs.PIPELINE_SECRETS_DOCKERHUB_USERNAME }}/nodejs-cicd-app:latest
+          docker push ${{ steps.pipeline_secrets.outputs.PIPELINE_SECRETS_DOCKERHUB_USERNAME }}/nodejs-cicd-app:${{ github.sha }}
 
+  # 6. Deploy Job via SSH to EC2 Ubuntu
   deploy_to_ec2:
     runs-on: ubuntu-latest
     needs: docker_build_and_push
     steps:
-      - name: Configure AWS credentials for app secrets
+      - name: Configure AWS credentials for Secrets Manager access
         uses: aws-actions/configure-aws-credentials@v3
         with:
           aws-region: ap-southeast-1
           role-to-assume: arn:aws:iam::634277304418:role/nodejs-cicd-role
 
-      - name: Get app secrets from AWS Secrets Manager
-        id: app_secrets
+      - name: Get all pipeline secrets from AWS Secrets Manager
+        id: pipeline_secrets
         uses: aws-actions/aws-secretsmanager-get-secrets@v1
         with:
           secret-ids: |
-            APP_CREDENTIALS:nodejs_github_actions
+            PIPELINE_SECRETS:nodejs_github_actions
           parse-json-secrets: true
 
-      - name: Add SSH private key
+      - name: Setup SSH private key
         run: |
           mkdir -p ~/.ssh
           echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
 
-      - name: Deploy to EC2 via SSH
+      - name: Deploy to EC2 via SSH and run container
         env:
-          DB_URL: ${{ steps.app_secrets.outputs.APP_CREDENTIALS_DB_URL }}
-          API_KEY: ${{ steps.app_secrets.outputs.APP_CREDENTIALS_API_KEY }}
+          DB_URL: ${{ steps.pipeline_secrets.outputs.PIPELINE_SECRETS_DB_URL }}
+          API_KEY: ${{ steps.pipeline_secrets.outputs.PIPELINE_SECRETS_API_KEY }}
         run: |
           ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_IP }} "
-            docker pull ${{ steps.dockerhub_secrets.outputs.DOCKERHUB_CREDENTIALS_username }}/nodejs-cicd-app:latest
+            docker pull ${{ steps.pipeline_secrets.outputs.PIPELINE_SECRETS_DOCKERHUB_USERNAME }}/nodejs-cicd-app:latest
             docker stop nodeapp || true && docker rm nodeapp || true
             docker run -d -p 3000:3000 --restart unless-stopped --name nodeapp \
               -e DB_URL=\$DB_URL \
               -e API_KEY=\$API_KEY \
-              ${{ steps.dockerhub_secrets.outputs.DOCKERHUB_CREDENTIALS_username }}/nodejs-cicd-app:latest
+              ${{ steps.pipeline_secrets.outputs.PIPELINE_SECRETS_DOCKERHUB_USERNAME }}/nodejs-cicd-app:latest
           "
