--- a/.github/workflows/nodejs-cicd.yml
+++ b/.github/workflows/nodejs-cicd.yml
@@ -1,17 +1,15 @@
 name: CI/CD Pipeline
 
-# Necessary permissions for AWS OIDC role assumption
 permissions:
   id-token: write
   contents: read
 
 on:
   push:
-    branches: [ "test" ]  # Adjust branch as needed
+    branches: [ "test" ]
 
 jobs:
 
-  # 1. Compile Job
   compile:
     runs-on: ec2-hosted
     steps:
@@ -22,20 +20,16 @@ jobs:
       - name: Install Dependencies
         run: npm ci
 
-  # 2. Security Check Job (Trivy + Gitleaks)
   security-check:
     runs-on: ec2-hosted
     needs: compile
     steps:
       - uses: actions/checkout@v4
-      - name: Trivy FS Scan (via Docker)
-        run: |
-          docker run --rm -v $(pwd):/project aquasec/trivy fs /project
-      - name: Gitleaks Code Scan (via Docker)
-        run: |
-          docker run --rm -v $(pwd):/app zricethezav/gitleaks:latest detect --source=/app --report-format=json --report-path=/app/gitleaks-report.json
+      - name: Trivy FS Scan
+        run: docker run --rm -v $(pwd):/project aquasec/trivy fs /project
+      - name: Gitleaks Code Scan
+        run: docker run --rm -v $(pwd):/app zricethezav/gitleaks:latest detect --source=/app --report-format=json --report-path=/app/gitleaks-report.json
 
-  # 3. Test Job
   test:
     runs-on: ec2-hosted
     needs: security-check
@@ -49,7 +43,6 @@ jobs:
       - name: Run Unit Tests
         run: npm test
 
-  # 4. SonarQube Scan Job
   sonar_scan:
     runs-on: ec2-hosted
     needs: test
@@ -58,15 +51,13 @@ jobs:
         with:
           fetch-depth: 0
 
-      # Configure AWS credentials with OIDC role
       - name: Configure AWS credentials for Secrets Manager access
         uses: aws-actions/configure-aws-credentials@v3
         with:
           aws-region: ap-southeast-1
           role-to-assume: arn:aws:iam::634277304418:role/nodejs-cicd-role
 
-      # Fetch all secrets from AWS Secrets Manager once
-      - name: Get all pipeline secrets from AWS Secrets Manager
+      - name: Get secrets from AWS Secrets Manager
         id: pipeline_secrets
         uses: aws-actions/aws-secretsmanager-get-secrets@v1
         with:
@@ -74,7 +65,6 @@ jobs:
             PIPELINE_SECRETS:arn:aws:secretsmanager:ap-southeast-1:634277304418:secret:nodejs_github_actions-NGJETp
           parse-json-secrets: true
 
-      # SonarQube Scan Step
       - name: SonarQube Scan
         uses: sonarsource/sonarqube-scan-action@master
         with:
@@ -83,14 +73,12 @@ jobs:
           SONAR_TOKEN: ${{ steps.pipeline_secrets.outputs.PIPELINE_SECRETS_SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ steps.pipeline_secrets.outputs.PIPELINE_SECRETS_SONAR_HOST_URL }}
 
-      # Install jq for quality gate check (optional step)
-      - name: Install jq locally
+      - name: Install jq
         run: |
           curl -L -o jq https://github.com/stedolan/jq/releases/download/jq-1.6/jq-linux64
           chmod +x jq
           echo "$PWD" >> $GITHUB_PATH
 
-      # SonarQube Quality Gate Step
       - name: SonarQube Quality Gate
         uses: sonarsource/sonarqube-quality-gate-action@master
         with:
@@ -99,21 +87,19 @@ jobs:
           SONAR_TOKEN: ${{ steps.pipeline_secrets.outputs.PIPELINE_SECRETS_SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ steps.pipeline_secrets.outputs.PIPELINE_SECRETS_SONAR_HOST_URL }}
 
-  # 5. Docker Build and Push Job
   docker_build_and_push:
     runs-on: ec2-hosted
     needs: sonar_scan
     steps:
       - uses: actions/checkout@v4
 
-      - name: Configure AWS credentials for Secrets Manager access
+      - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v3
         with:
           aws-region: ap-southeast-1
           role-to-assume: arn:aws:iam::634277304418:role/nodejs-cicd-role
 
-      # Fetch secrets once again (note: can be optimized to pass between jobs)
-      - name: Get all pipeline secrets from AWS Secrets Manager
+      - name: Get secrets from AWS Secrets Manager
         id: pipeline_secrets
         uses: aws-actions/aws-secretsmanager-get-secrets@v1
         with:
@@ -127,7 +113,7 @@ jobs:
           username: ${{ steps.pipeline_secrets.outputs.PIPELINE_SECRETS_DOCKERHUB_USERNAME }}
           password: ${{ steps.pipeline_secrets.outputs.PIPELINE_SECRETS_DOCKERHUB_TOKEN }}
 
-      - name: Build Docker Image with version tag
+      - name: Build and Tag Docker Image
         run: |
           docker build -t ${{ steps.pipeline_secrets.outputs.PIPELINE_SECRETS_DOCKERHUB_USERNAME }}/nodejs-cicd-app:latest .
           docker tag ${{ steps.pipeline_secrets.outputs.PIPELINE_SECRETS_DOCKERHUB_USERNAME }}/nodejs-cicd-app:latest ${{ steps.pipeline_secrets.outputs.PIPELINE_SECRETS_DOCKERHUB_USERNAME }}/nodejs-cicd-app:${{ github.sha }}
@@ -141,18 +127,17 @@ jobs:
           docker push ${{ steps.pipeline_secrets.outputs.PIPELINE_SECRETS_DOCKERHUB_USERNAME }}/nodejs-cicd-app:latest
           docker push ${{ steps.pipeline_secrets.outputs.PIPELINE_SECRETS_DOCKERHUB_USERNAME }}/nodejs-cicd-app:${{ github.sha }}
 
-  # 6. Deploy Job via SSH to EC2 Ubuntu
   deploy_to_ec2:
     runs-on: ubuntu-latest
     needs: docker_build_and_push
     steps:
-      - name: Configure AWS credentials for Secrets Manager access
+      - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v3
         with:
           aws-region: ap-southeast-1
           role-to-assume: arn:aws:iam::634277304418:role/nodejs-cicd-role
 
-      - name: Get all pipeline secrets from AWS Secrets Manager
+      - name: Get secrets from AWS Secrets Manager
         id: pipeline_secrets
         uses: aws-actions/aws-secretsmanager-get-secrets@v1
         with:
@@ -166,16 +151,11 @@ jobs:
           echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
 
-      - name: Deploy to EC2 via SSH and run container
-        env:
-          DB_URL: ${{ steps.pipeline_secrets.outputs.PIPELINE_SECRETS_DB_URL }}
-          API_KEY: ${{ steps.pipeline_secrets.outputs.PIPELINE_SECRETS_API_KEY }}
+      - name: Deploy to EC2
         run: |
           ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_IP }} "
             docker pull ${{ steps.pipeline_secrets.outputs.PIPELINE_SECRETS_DOCKERHUB_USERNAME }}/nodejs-cicd-app:latest
             docker stop nodeapp || true && docker rm nodeapp || true
             docker run -d -p 3000:3000 --restart unless-stopped --name nodeapp \
-              -e DB_URL=\$DB_URL \
-              -e API_KEY=\$API_KEY \
               ${{ steps.pipeline_secrets.outputs.PIPELINE_SECRETS_DOCKERHUB_USERNAME }}/nodejs-cicd-app:latest
           "
