--- a/.github/workflows/nodejs-cicd.yml
+++ b/.github/workflows/nodejs-cicd.yml
@@ -6,10 +6,11 @@ permissions:
 
 on:
   push:
-    branches: [ "test" ]
+    branches: [ "test" ]  # Adjust as needed
 
 jobs:
 
+  # 1. Compile Job
   compile:
     runs-on: ec2-hosted
     steps:
@@ -20,16 +21,20 @@ jobs:
       - name: Install Dependencies
         run: npm ci
 
+  # 2. Security Check Job (Trivy + Gitleaks)
   security-check:
     runs-on: ec2-hosted
     needs: compile
     steps:
       - uses: actions/checkout@v4
-      - name: Trivy FS Scan (via Docker)
-        run: docker run --rm -v $(pwd):/project aquasec/trivy fs /project
-      - name: Gitleaks Code Scan (via Docker)
-        run: docker run --rm -v $(pwd):/app zricethezav/gitleaks:latest detect --source=/app --report-format=json --report-path=/app/gitleaks-report.json
+      - name: Trivy FS Scan
+        run: |
+          docker run --rm -v $(pwd):/project aquasec/trivy fs /project
+      - name: Gitleaks Scan
+        run: |
+          docker run --rm -v $(pwd):/app zricethezav/gitleaks:latest detect --source=/app --report-format=json --report-path=/app/gitleaks-report.json
 
+  # 3. Test Job
   test:
     runs-on: ec2-hosted
     needs: security-check
@@ -43,6 +48,7 @@ jobs:
       - name: Run Unit Tests
         run: npm test
 
+  # 4. SonarQube Scan
   sonar_scan:
     runs-on: ec2-hosted
     needs: test
@@ -51,28 +57,29 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Configure AWS credentials for Secrets Manager access
+      - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v3
         with:
           aws-region: ap-southeast-1
           role-to-assume: arn:aws:iam::634277304418:role/nodejs-cicd-role
 
-      - name: Get Sonar secrets from AWS Secrets Manager
+      - name: Get secrets from AWS Secrets Manager
+        id: pipeline_secrets
         uses: aws-actions/aws-secretsmanager-get-secrets@v1
         with:
-          secrets: |
-            SONAR_TOKEN,nodejs_github_actions:SONAR_TOKEN
-            SONAR_HOST_URL,nodejs_github_actions:SONAR_HOST_URL
+          secret-ids: |
+            pipeline_secrets:arn:aws:secretsmanager:ap-southeast-1:634277304418:secret:nodejs_github_actions-NGJETp
+          parse-json-secrets: true
 
       - name: SonarQube Scan
         uses: sonarsource/sonarqube-scan-action@master
         with:
           projectBaseDir: .
         env:
-          SONAR_TOKEN: ${{ env.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ env.SONAR_HOST_URL }}
+          SONAR_TOKEN: ${{ steps.pipeline_secrets.outputs.pipeline_secrets_SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ steps.pipeline_secrets.outputs.pipeline_secrets_SONAR_HOST_URL }}
 
-      - name: Install jq locally
+      - name: Install jq
         run: |
           curl -L -o jq https://github.com/stedolan/jq/releases/download/jq-1.6/jq-linux64
           chmod +x jq
@@ -83,84 +90,80 @@ jobs:
         with:
           pollingTimeoutSec: 600
         env:
-          SONAR_TOKEN: ${{ env.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ env.SONAR_HOST_URL }}
+          SONAR_TOKEN: ${{ steps.pipeline_secrets.outputs.pipeline_secrets_SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ steps.pipeline_secrets.outputs.pipeline_secrets_SONAR_HOST_URL }}
 
+  # 5. Docker Build and Push
   docker_build_and_push:
     runs-on: ec2-hosted
     needs: sonar_scan
     steps:
       - uses: actions/checkout@v4
 
-      - name: Configure AWS credentials for Secrets Manager access
+      - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v3
         with:
           aws-region: ap-southeast-1
           role-to-assume: arn:aws:iam::634277304418:role/nodejs-cicd-role
 
-      - name: Get DockerHub secrets from AWS Secrets Manager
+      - name: Get secrets from AWS Secrets Manager
+        id: pipeline_secrets
         uses: aws-actions/aws-secretsmanager-get-secrets@v1
         with:
-          secrets: |
-            DOCKERHUB_USERNAME,nodejs_github_actions:DOCKERHUB_USERNAME
-            DOCKERHUB_TOKEN,nodejs_github_actions:DOCKERHUB_TOKEN
+          secret-ids: |
+            pipeline_secrets:arn:aws:secretsmanager:ap-southeast-1:634277304418:secret:nodejs_github_actions-NGJETp
+          parse-json-secrets: true
 
       - name: Login to DockerHub
         uses: docker/login-action@v3
         with:
-          username: ${{ env.DOCKERHUB_USERNAME }}
-          password: ${{ env.DOCKERHUB_TOKEN }}
+          username: ${{ steps.pipeline_secrets.outputs.pipeline_secrets_DOCKERHUB_USERNAME }}
+          password: ${{ steps.pipeline_secrets.outputs.pipeline_secrets_DOCKERHUB_TOKEN }}
 
-      - name: Build Docker Image with version tag
+      - name: Build Docker Image
         run: |
-          docker build -t ${{ env.DOCKERHUB_USERNAME }}/nodejs-cicd-app:latest .
-          docker tag ${{ env.DOCKERHUB_USERNAME }}/nodejs-cicd-app:latest ${{ env.DOCKERHUB_USERNAME }}/nodejs-cicd-app:${{ github.sha }}
+          docker build -t ${{ steps.pipeline_secrets.outputs.pipeline_secrets_DOCKERHUB_USERNAME }}/nodejs-cicd-app:latest .
+          docker tag ${{ steps.pipeline_secrets.outputs.pipeline_secrets_DOCKERHUB_USERNAME }}/nodejs-cicd-app:latest ${{ steps.pipeline_secrets.outputs.pipeline_secrets_DOCKERHUB_USERNAME }}/nodejs-cicd-app:${{ github.sha }}
 
       - name: Trivy Image Scan
         run: |
-          docker run --rm -v /var/run/docker.sock:/var/run/docker.sock aquasec/trivy image ${{ env.DOCKERHUB_USERNAME }}/nodejs-cicd-app:latest
+          docker run --rm -v /var/run/docker.sock:/var/run/docker.sock aquasec/trivy image ${{ steps.pipeline_secrets.outputs.pipeline_secrets_DOCKERHUB_USERNAME }}/nodejs-cicd-app:latest
 
       - name: Push Docker Image
         run: |
-          docker push ${{ env.DOCKERHUB_USERNAME }}/nodejs-cicd-app:latest
-          docker push ${{ env.DOCKERHUB_USERNAME }}/nodejs-cicd-app:${{ github.sha }}
+          docker push ${{ steps.pipeline_secrets.outputs.pipeline_secrets_DOCKERHUB_USERNAME }}/nodejs-cicd-app:latest
+          docker push ${{ steps.pipeline_secrets.outputs.pipeline_secrets_DOCKERHUB_USERNAME }}/nodejs-cicd-app:${{ github.sha }}
 
+  # 6. Deploy to EC2
   deploy_to_ec2:
     runs-on: ubuntu-latest
     needs: docker_build_and_push
     steps:
-      - name: Configure AWS credentials for Secrets Manager access
+      - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v3
         with:
           aws-region: ap-southeast-1
           role-to-assume: arn:aws:iam::634277304418:role/nodejs-cicd-role
 
-      - name: Get DockerHub and app secrets from AWS Secrets Manager
+      - name: Get secrets from AWS Secrets Manager
+        id: pipeline_secrets
         uses: aws-actions/aws-secretsmanager-get-secrets@v1
         with:
-          secrets: |
-            DOCKERHUB_USERNAME,nodejs_github_actions:DOCKERHUB_USERNAME
-            DOCKERHUB_TOKEN,nodejs_github_actions:DOCKERHUB_TOKEN
-            DB_URL,nodejs_github_actions:DB_URL
-            API_KEY,nodejs_github_actions:API_KEY
+          secret-ids: |
+            pipeline_secrets:arn:aws:secretsmanager:ap-southeast-1:634277304418:secret:nodejs_github_actions-NGJETp
+          parse-json-secrets: true
 
-      - name: Setup SSH private key
+      - name: Setup SSH key
         run: |
           mkdir -p ~/.ssh
           echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
 
-      - name: Deploy to EC2 via SSH and run container
-        env:
-          DB_URL: ${{ env.DB_URL }}
-          API_KEY: ${{ env.API_KEY }}
+      - name: Deploy via SSH
         run: |
           ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_IP }} "
-            docker login -u ${{ env.DOCKERHUB_USERNAME }} -p ${{ env.DOCKERHUB_TOKEN }}
-            docker pull ${{ env.DOCKERHUB_USERNAME }}/nodejs-cicd-app:latest
+            docker pull ${{ steps.pipeline_secrets.outputs.pipeline_secrets_DOCKERHUB_USERNAME }}/nodejs-cicd-app:latest
             docker stop nodeapp || true && docker rm nodeapp || true
             docker run -d -p 3000:3000 --restart unless-stopped --name nodeapp \
-              -e DB_URL=\$DB_URL \
-              -e API_KEY=\$API_KEY \
-              ${{ env.DOCKERHUB_USERNAME }}/nodejs-cicd-app:latest
+              ${{ steps.pipeline_secrets.outputs.pipeline_secrets_DOCKERHUB_USERNAME }}/nodejs-cicd-app:latest
           "
