--- a/.github/workflows/nodejs-cicd.yml
+++ b/.github/workflows/nodejs-cicd.yml
@@ -64,7 +64,7 @@ jobs:
         uses: aws-actions/aws-secretsmanager-get-secrets@v1
         with:
           secret-ids: |
-            nodejs_secret:arn:aws:secretsmanager:ap-southeast-1:634277304418:secret:nodejs_github_actions-NGJETp
+            nodejs_github_actions-NGJETp
           parse-json-secrets: true
 
       - name: SonarQube Scan
@@ -106,7 +106,7 @@ jobs:
         uses: aws-actions/aws-secretsmanager-get-secrets@v1
         with:
           secret-ids: |
-            nodejs_secret:arn:aws:secretsmanager:ap-southeast-1:634277304418:secret:nodejs_github_actions-NGJETp
+            nodejs_github_actions-NGJETp
           parse-json-secrets: true
 
       - name: Login to DockerHub
@@ -144,7 +144,7 @@ jobs:
         uses: aws-actions/aws-secretsmanager-get-secrets@v1
         with:
           secret-ids: |
-            nodejs_secret:arn:aws:secretsmanager:ap-southeast-1:634277304418:secret:nodejs_github_actions-NGJETp
+            nodejs_github_actions-NGJETp
           parse-json-secrets: true
 
       - name: Setup SSH key
