--- a/.github/workflows/togarindrbranch.yml
+++ b/.github/workflows/togarindrbranch.yml
@@ -41,42 +41,40 @@ jobs:
           set -a
           source .env
           set +a
-
       # ✅ Authenticate to Google Cloud safely
       - name: Authenticate to Google Cloud
         env:
           GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
+          GCP_REGION: ${{ secrets.GCP_REGION }}
         run: |
-          # Decode base64 if needed, or fallback to plain JSON
           echo "$GCP_SA_KEY" | base64 --decode > gcp-key.json 2>/dev/null || echo "$GCP_SA_KEY" > gcp-key.json
-
-          # Activate service account and configure Artifact Registry auth
           gcloud auth activate-service-account --key-file=gcp-key.json
-          gcloud auth configure-docker ${{ secrets.GCP_REGION }}-docker.pkg.dev --quiet
-
+          gcloud auth configure-docker "$GCP_REGION-docker.pkg.dev" --quiet
       # Build & tag Docker image
       - name: Build and Tag Docker Image
+        env:
+          GCP_REGION: ${{ secrets.GCP_REGION }}
         run: |
           echo "${{ secrets.ENV_FILE }}" > .env
           set -a
           source .env
           set +a
-
-          IMAGE_NAME="${{ secrets.GCP_REGION }}-docker.pkg.dev/$GCP_PROJECT_ID/$GAR_REPO/nodejs-cicd-app"
-
+          IMAGE_NAME="$GCP_REGION-docker.pkg.dev/$GCP_PROJECT_ID/$GAR_REPO/nodejs-cicd-app"
           docker build -t $IMAGE_NAME:latest .
           docker tag $IMAGE_NAME:latest $IMAGE_NAME:${{ github.sha }}
-
       # Run Trivy security scan
       - name: Trivy Image Scan
+        env:
+          GCP_REGION: ${{ secrets.GCP_REGION }}
         run: |
-          IMAGE_NAME="${{ secrets.GCP_REGION }}-docker.pkg.dev/$GCP_PROJECT_ID/$GAR_REPO/nodejs-cicd-app"
+          IMAGE_NAME="$GCP_REGION-docker.pkg.dev/$GCP_PROJECT_ID/$GAR_REPO/nodejs-cicd-app"
           docker run --rm -v /var/run/docker.sock:/var/run/docker.sock aquasec/trivy image $IMAGE_NAME:latest
-
       # Push image to Google Artifact Registry
       - name: Push Docker Image to Artifact Registry
+        env:
+          GCP_REGION: ${{ secrets.GCP_REGION }}
         run: |
-          IMAGE_NAME="${{ secrets.GCP_REGION }}-docker.pkg.dev/$GCP_PROJECT_ID/$GAR_REPO/nodejs-cicd-app"
+          IMAGE_NAME="$GCP_REGION-docker.pkg.dev/$GCP_PROJECT_ID/$GAR_REPO/nodejs-cicd-app"
           docker push $IMAGE_NAME:latest
           docker push $IMAGE_NAME:${{ github.sha }}
 
@@ -88,15 +86,17 @@ jobs:
         run: |
           docker ps -q --filter "name=nodeapp" | grep -q . && \
           docker stop nodeapp && docker rm nodeapp || echo "No container to stop"
-
       - name: Pull Latest Docker Image
+        env:
+          GCP_REGION: ${{ secrets.GCP_REGION }}
         run: |
-          IMAGE_NAME="${{ secrets.GCP_REGION }}-docker.pkg.dev/$GCP_PROJECT_ID/$GAR_REPO/nodejs-cicd-app"
+          IMAGE_NAME="$GCP_REGION-docker.pkg.dev/$GCP_PROJECT_ID/$GAR_REPO/nodejs-cicd-app"
           docker pull $IMAGE_NAME:latest
-
       - name: Run New Container with Restart Policy
+        env:
+          GCP_REGION: ${{ secrets.GCP_REGION }}
         run: |
-          IMAGE_NAME="${{ secrets.GCP_REGION }}-docker.pkg.dev/$GCP_PROJECT_ID/$GAR_REPO/nodejs-cicd-app"
+          IMAGE_NAME="$GCP_REGION-docker.pkg.dev/$GCP_PROJECT_ID/$GAR_REPO/nodejs-cicd-app"
           docker run -d -p 80:3000 \
             --restart unless-stopped \
             --name nodeapp \
